--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,1 +1,1 @@
-$primary-background-color: #0c5b5f;
+$primary-color: #0c5b5f;
